--- a/assets/scss/components/_filter.scss
+++ b/assets/scss/components/_filter.scss
@@ -133,7 +133,7 @@
 		li{
 			margin: 0 !important;
 			padding: 0px 5px;
-			border-right: 1px solid;
+			border-inline-end: 1px solid;
 			border-color: rgba(0, 0, 0, 0.05);
 			a{
 				background: #fff;
