--- a/assets/scss/components/_tabs.scss
+++ b/assets/scss/components/_tabs.scss
@@ -253,7 +253,7 @@
 			.nav-item{
 				margin: 0 !important;
 				padding: 0px 5px;
-				border-right: 1px solid;
+				border-inline-end: 1px solid;
 				border-color: rgba(0, 0, 0, 0.05);
 
 				&:last-child{
