--- a/assets/scss/components/_video-bx.scss
+++ b/assets/scss/components/_video-bx.scss
@@ -20,7 +20,7 @@
 		i{
 			color: #fff;
 			font-size: 16px;
-			margin-left: 2px;
+			margin-inline-start: 2px;
 		}
 	}
 	span{
@@ -32,7 +32,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin-left: auto;
+		margin-inline-start: auto;
 		text-decoration: none;
 		font-size: 18px;
 	}
@@ -111,7 +111,7 @@
 		font-weight: 500;
 		font-size: 16px;
 		display: inline-block;
-		margin-left: 10px;
+		margin-inline-start: 10px;
 	}
 	.video-btn {
 		position: relative;
