--- a/assets/css/bootstrap-reboot.css
+++ b/assets/css/bootstrap-reboot.css
@@ -287,7 +287,7 @@ address {
 
 ol,
 ul {
-  padding-left: 2rem;
+  padding-inline-start: 2rem;
 }
 
 ol,
@@ -310,7 +310,7 @@ dt {
 
 dd {
   margin-bottom: 0.5rem;
-  margin-left: 0;
+  margin-inline-start: 0;
 }
 
 blockquote {
