--- a/assets/scss/base/_preloader.scss
+++ b/assets/scss/base/_preloader.scss
@@ -5,7 +5,7 @@
 	position: fixed;
     height: 100%;
     width: 100%;
-    left: 0;
+    inset-inline-start: 0;
     top: 0;
     z-index: 9999999;
     display: flex;
@@ -197,7 +197,7 @@
 		text-align: center;
 		position: absolute;
 		top: 50%;
-		left: 50%;
+		inset-inline-start: 50%;
 		transform: translate(-50%, -50%);
 		text-transform: uppercase;
 		font-weight: 500;
@@ -226,9 +226,9 @@
 	}
 
 	@keyframes load {
-	  0% { left: 0; height: 30px; width: 15px }
+	  0% { inset-inline-start: 0; height: 30px; width: 15px }
 	  50% { height: 5px; width: 40px }
-	  100% { left: 235px; height: 30px; width: 15px}
+	  100% { inset-inline-start: 235px; height: 30px; width: 15px}
 	}
 }
 @keyframes dz_glitch{
@@ -269,7 +269,7 @@
 			position: absolute;
 			background: var(--loader-color);
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 0%;
 			height: 100%;
 			border-radius: 30px;
@@ -282,8 +282,8 @@
 	}
 	100% {
 		width: 0;
-		right: 0;
-		left: unset;
+		inset-inline-end: 0;
+		inset-inline-start: unset;
 	}
 }
 
