--- a/assets/scss/components/_blog-post.scss
+++ b/assets/scss/components/_blog-post.scss
@@ -118,7 +118,7 @@
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			mask-image: url(../images/bg02.svg);
 			mask-position: right bottom;
@@ -142,7 +142,7 @@
 		}
 		.btn-square{
 		    position: absolute;
-			right: 0;
+			inset-inline-end: 0;
 			bottom: 0;
 		}
 		p{
@@ -158,7 +158,7 @@
 		.dz-meta{
 			margin-bottom: 0;
 			margin-top: 25px;
-			margin-right: 35px;
+			margin-inline-end: 35px;
 			
 			li{
 				background-color: var(--bs-primary);
@@ -180,7 +180,7 @@
 					width: 6px;
 					border-radius: 50%;
 					background-color: #fff;
-					left: 10px;
+					inset-inline-start: 10px;
 				}
 			}
 			@include respond('phone'){
@@ -259,7 +259,7 @@
 				align-self: center;
 				box-shadow: 0 0 40px rgba(var(--bs-secondary-rgb), 0.1);
 				border-radius: 15px;
-				margin-left: -60px;
+				margin-inline-start: -60px;
 				background-color: #fff;
 				margin-top: 40px;
 				margin-bottom: 40px;
@@ -296,8 +296,8 @@
 				}
 				.dz-info{
 					margin-top: -30px;
-					margin-left: 20px;
-					margin-right: 20px;
+					margin-inline-start: 20px;
+					margin-inline-end: 20px;
 					margin-bottom: 0;
 				}
 			}
@@ -311,8 +311,8 @@
 				.dz-info{
 					padding: 20px;
 					margin-top: -20px;
-					margin-left: 0;
-					margin-right: 0;
+					margin-inline-start: 0;
+					margin-inline-end: 0;
 				}
 			}
 		}
@@ -336,7 +336,7 @@
 					background: linear-gradient(to top, rgba(var(--bs-secondary-rgb), 0.4) 0%, rgba(var(--bs-secondary-rgb), 0));
 					position: absolute;
 					height: 100%;
-					left: 0;
+					inset-inline-start: 0;
 					width: 100%;
 					top: 0;
 				}		
@@ -370,7 +370,7 @@
 				padding: 5px 15px;
 				position: absolute;
 				top: 30px;
-				left: 30px;
+				inset-inline-start: 30px;
 				z-index: 1;
 				color: var(--bs-secondary);
 				background-color: #fff;
@@ -385,7 +385,7 @@
 					font-size: 7px;
 					transform: translateY(-2px);
 					display: inline-block;
-					margin-right: 6px;
+					margin-inline-end: 6px;
 				}
 			}
 			.dz-meta{
@@ -416,7 +416,7 @@
 					
 					.post-date {
 						top: 20px;
-						left: 20px;
+						inset-inline-start: 20px;
 					}
 					.bottom-info {
 						gap: 15px;
@@ -550,7 +550,7 @@
 					width: 6px;
 					border-radius: 50%;
 					background-color: var(--bs-primary);
-					left: 10px;
+					inset-inline-start: 10px;
 				}
 			}
 		}
@@ -697,7 +697,7 @@
 					width: 6px;
 					border-radius: 50%;
 					background-color: var(--bs-primary);
-					left: 10px;
+					inset-inline-start: 10px;
 				}
 			}
 		}
@@ -781,7 +781,7 @@
 		.dz-info{
 			position: absolute;
 			bottom: 0;
-			left: 0;
+			inset-inline-start: 0;
 			padding: 40px;
 			z-index: 1;
 
@@ -805,7 +805,7 @@
 			position: absolute;
 			content: "";
 			bottom: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 100%;
 			height: 40%;
 			background: linear-gradient(180deg, rgba(71, 60, 37, 0) 0%, rgba(71, 60, 37, 0.4) 100%);
@@ -828,7 +828,7 @@
 				width: 6px;
 				border-radius: 50%;
 				background-color: var(--bs-primary);
-				left: 10px;
+				inset-inline-start: 10px;
 			}
 		}
 	}
@@ -845,7 +845,7 @@
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			mask-image: url(../images/bg02.svg);
 			mask-position: right bottom;
@@ -874,7 +874,7 @@
 			padding: 5px 15px;
 			position: absolute;
 			top: 20px;
-			left: 20px;
+			inset-inline-start: 20px;
 			z-index: 1;
 			color: #fff;
 			background: var(--gradient-primary);
@@ -888,7 +888,7 @@
 				font-size: 7px;
 				transform: translateY(-2px);
 				display: inline-block;
-				margin-right: 6px;
+				margin-inline-end: 6px;
 			}
 		}
 		&.blog-half{
@@ -944,7 +944,7 @@
 					background: linear-gradient(180deg, rgba(255, 140, 112, 0.3) 0%, #F0588D 100%);
 					position: absolute;
 					height: 100%;
-					left: 0;
+					inset-inline-start: 0;
 					width: 100%;
 					top: 0;
 					opacity: 0.8;
@@ -984,7 +984,7 @@
 				padding: 5px 15px;
 				position: absolute;
 				top: 30px;
-				left: 30px;
+				inset-inline-start: 30px;
 				z-index: 1;
 				color: #fff;
 				background:var(--gradient-primary);
@@ -999,7 +999,7 @@
 					font-size: 7px;
 					transform: translateY(-2px);
 					display: inline-block;
-					margin-right: 6px;
+					margin-inline-end: 6px;
 				}
 			}
 			.dz-meta{
@@ -1030,7 +1030,7 @@
 					
 					.post-date {
 						top: 20px;
-						left: 20px;
+						inset-inline-start: 20px;
 					}
 					.bottom-info {
 						gap: 15px;
@@ -1199,7 +1199,7 @@
 					width: 6px;
 					border-radius: 50%;
 					background-color: var(--bs-primary);
-					left: 10px;
+					inset-inline-start: 10px;
 				}
 			}
 		}
@@ -1300,7 +1300,7 @@
 .dz-blog-swiper1{
 	.swiper-wrapper{
 		.content-media{
-			margin-right: 32px;
+			margin-inline-end: 32px;
 		}
 	}
 }
@@ -1317,7 +1317,7 @@
 }
 .blog-list-view{
 	@media (min-width: 13800px){
-		padding-right: 100px;
+		padding-inline-end: 100px;
 	}
 }
 
