--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -463,7 +463,7 @@
 		border: 1px solid var(--bs-secondary);
 		border-radius: 50%;
 		position: absolute;
-		right: -12px;
+		inset-inline-end: -12px;
 		z-index: 9999;
 		background: #fff;
 		width: 26px;
@@ -623,8 +623,8 @@
 			font-size: 16px;
 			width: 40px;
 			color: var(--bs-heading-color);
-			margin-left: auto !important;
-			margin-right: auto !important;
+			margin-inline-start: auto !important;
+			margin-inline-end: auto !important;
 	
 			&:focus{
 				box-shadow: unset; 
@@ -632,14 +632,14 @@
 		}
 		.input-group-btn-vertical{
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			width: 100%;
 			display: flex;
 			justify-content: space-between;
 			flex-direction: row-reverse;
 			padding: 6px;
-			margin-left: 0 !important;
+			margin-inline-start: 0 !important;
 			border-radius: 8px;
 			height: 100%;
 			
@@ -755,12 +755,12 @@
 
 .btn-hover2::before {
     bottom: 10px;
-    right: -45%
+    inset-inline-end: -45%
 }
 
 .btn-hover2::after {
     bottom: -15%;
-    right: -30%
+    inset-inline-end: -30%
 }
 
 .btn-hover2:active,.btn-hover2:hover,.btn-hover2:focus {
@@ -798,7 +798,7 @@
     background: var(--gradient-primary);
     position: relative;
     z-index: 1;
-	margin-left: auto;
+	margin-inline-start: auto;
 	@include respond('phone-land'){
 		width: 100px;
 		height: 100px;
@@ -811,7 +811,7 @@
 		content: "";
 		position: absolute;
 		top: 50%;
-		left: 50%;
+		inset-inline-start: 50%;
 		width: 95%;
 		height: 95%;
 		background: var(--bs-secondary);
