--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -331,7 +331,7 @@ label.error {
 			font-family: 'feather';
 			border: 0;
 			position: absolute;
-			right: 20px;
+			inset-inline-end: 20px;
 			top: 50%;
 			transform: translateY(-50%);
 			font-size: 20px;
@@ -500,8 +500,8 @@ label.error {
 		border: 1px solid var(--bs-body-color);
 		border-radius: 2px !important;
 		box-shadow: none;
-		margin-right: 8px;
-		margin-left: 0;
+		margin-inline-end: 8px;
+		margin-inline-start: 0;
 	}
 	.form-check-input:checked[type="radio"],
 	.form-check-input:checked[type="checkbox"]{
@@ -583,7 +583,7 @@ label.error {
 			font-size: 16px;
 		}
 		.dropdown-toggle::after {
-			right: 0;
+			inset-inline-end: 0;
 		}
 	}
 	&.underline-1{
@@ -596,7 +596,7 @@ label.error {
 		font-size: 24px;
 		position: absolute;
 		top: 16px;
-		left: 0;
+		inset-inline-start: 0;
 		border: 0;
 		padding: 0;
 	}
@@ -619,12 +619,12 @@ label.error {
 		}
 	}
 	&.input-icon-left .form-control{
-		padding-left: 40px;
+		padding-inline-start: 40px;
 	}
 	&.input-icon-right .form-control{
-		padding-right: 40px;
-		left: auto;
-		right: 0;
+		padding-inline-end: 40px;
+		inset-inline-start: auto;
+		inset-inline-end: 0;
 	}
 	&.input-icon-left,
 	&.input-icon-right{
@@ -652,7 +652,7 @@ label.error {
 		outline: 0 !important;
 		font-size: 15px;
 		border-radius: 15px;
-		padding-right: 50px;
+		padding-inline-end: 50px;
 	}
 	.bs-select .dropdown-toggle::after{
 		opacity: 0.5;
@@ -673,7 +673,7 @@ label.error {
 		font-size: 15px;
 		color: var(--bs-body-color);
 		top: 18px;
-		left: 20px;
+		inset-inline-start: 20px;
 		
 		&::after{
 			content: none !important;
@@ -685,7 +685,7 @@ label.error {
 		font-size: 20px;
 		position: absolute;
 		top: 13px;
-		right: 5px;
+		inset-inline-end: 5px;
 		opacity: 0.5;
 	}
 	&.input-light{
@@ -717,8 +717,8 @@ label.error {
 		&.input-icon-left{
 			.input-group-text{
 				font-size: 24px;
-				left: 5px;
-				right: auto;
+				inset-inline-start: 5px;
+				inset-inline-end: auto;
 				opacity: 1;
 			}
 		}
@@ -745,7 +745,7 @@ label.error {
 		font-size: 16px;
 		border-radius: 50px;
 		font-weight: 500;
-		padding-right: 50px;
+		padding-inline-end: 50px;
 	}
 	.bs-select .dropdown-toggle::after{
 		opacity: 0.5;
@@ -767,7 +767,7 @@ label.error {
 		font-weight: 500;
 		color: rgba(var(--bs-secondary-rgb), 0.6);
 		top: 18px;
-		left: 25px;
+		inset-inline-start: 25px;
 		
 		&::after{
 			content: none !important;
@@ -779,7 +779,7 @@ label.error {
 		font-size: 20px;
 		position: absolute;
 		top: 13px;
-		right: 5px;
+		inset-inline-end: 5px;
 	}
 	&.input-light{
 		.form-control{
@@ -841,7 +841,7 @@ input[type=number] {
 				transform: translateY(-27px);
 				background-color: #fff;
 				padding: 0 8px;
-				left: 15px;
+				inset-inline-start: 15px;
 			}
 		}
 	}
@@ -856,7 +856,7 @@ input[type=number] {
 				background-color: var(--bs-light);
 				padding: 0 8px;
 				font-weight: 500;
-				left: 15px;
+				inset-inline-start: 15px;
 			}
 		}
 	}
@@ -896,7 +896,7 @@ input[type=number] {
 			border-radius: 5px;
 		}
 		&.text-vr-wrapper{
-			padding-left: 50px;
+			padding-inline-start: 50px;
 		}
 		.text-vertical{
 			writing-mode: tb;
@@ -914,7 +914,7 @@ input[type=number] {
 			align-items: center;
 			justify-content: center;
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 45px;
 		}
 		.form-body{
@@ -933,12 +933,12 @@ input[type=number] {
 		}
 		@include custommq ($max:1380px){
 			&[class*="m-l"]{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 		}
 		@include respond('tab-port'){
 			&.text-vr-wrapper{
-				padding-left: 0;			
+				padding-inline-start: 0;			
 			}
 			.text-vertical{
 				display: none;
@@ -987,7 +987,7 @@ input[type=number] {
 			width: 145px;
 			aspect-ratio: 1 / 1;
 			position: absolute;
-			right: 20px;
+			inset-inline-end: 20px;
 			top: 20px;
 			z-index: 0;
 			background-size: 100%;
@@ -1077,7 +1077,7 @@ input[type=number] {
 			width: 145px;
 			aspect-ratio: 1 / 1;
 			position: absolute;
-			right: 20px;
+			inset-inline-end: 20px;
 			top: 20px;
 			z-index: 0;
 			background-size: 100%;
