--- a/assets/scss/components/_iconbox.scss
+++ b/assets/scss/components/_iconbox.scss
@@ -497,7 +497,7 @@
 			&::after{
 				content: "";
 				position: absolute;
-				left: 0;
+				inset-inline-start: 0;
 				top: 0;
 				height: 100%;
 				width: 100%;
@@ -568,7 +568,7 @@
 		}
 		.icon-bg{
 			position: absolute;
-			right: 5px;
+			inset-inline-end: 5px;
 			top: 5px;
 			width: 140px;
 			opacity: 0.025;
@@ -603,15 +603,15 @@
 			position: relative;
 			padding-top: 20px;
 			margin-top: 20px;
-			margin-right: 50px;
+			margin-inline-end: 50px;
 			@include transitionMedium;
 			
 			&::before{
 				content: "";
 				position: absolute;
 				top: 0;
-				left: 0;
-				right: 0;
+				inset-inline-start: 0;
+				inset-inline-end: 0;
 				height: 1px;
 				background-image: linear-gradient(to right, rgba(var(--bs-body-color-rgb), 0.3) 50%, rgba(255, 255, 255, 0) 0%);
 				@include transitionMedium;
@@ -640,7 +640,7 @@
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			mask-image: url(../images/bg02.svg);
 			mask-position: right bottom;
@@ -650,7 +650,7 @@
 		.btn-square{
 			box-shadow: 0 20px 50px rgba(var(--bs-secondary-rgb), 0.1);
 			position: absolute;
-			right: -80px;
+			inset-inline-end: -80px;
 			bottom: -30px;
 			font-size: 20px;
 			
@@ -734,8 +734,8 @@
 		}
 		&.text-center{
 			.icon-bx{
-				margin-right: auto;
-				margin-left: auto;
+				margin-inline-end: auto;
+				margin-inline-start: auto;
 			}
 		}
 	}
@@ -786,7 +786,7 @@
 			color: var(--bs-secondary);
 			opacity: 0.1;
 			position: absolute;
-			right: 25px;
+			inset-inline-end: 25px;
 			top: 20px;
 			z-index: 2;
 			@include transitionMedium;
@@ -798,7 +798,7 @@
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			mask-image: url(../images/bg01.svg);
 			mask-position: right bottom;
@@ -810,7 +810,7 @@
 			height: 90px;
 			display: block;
 			position: absolute;
-			right: 0;
+			inset-inline-end: 0;
 			bottom: 0;
 			border-radius: 20px;
 			background-color: #fff;
@@ -844,7 +844,7 @@
 				background: linear-gradient(to right, var(--bs-secondary) 0, rgba(0, 0, 0, 0) 100%);
 				position: absolute;
 				opacity: 0.3;
-				left: 0;
+				inset-inline-start: 0;
 				bottom: 0;
 				@include transitionMedium;
 			}
@@ -857,7 +857,7 @@
 			mask-image: url(../images/bg01.svg);
 			-webkit-mask-image: url(../images/bg01.svg);
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			width: 100%;
 			height: 100%;
@@ -994,7 +994,7 @@
 			width: 100%;
 			height: 100%;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			z-index: -1;
 			mask-image: url(../images/bg03.svg);
 			mask-position: top right;
@@ -1006,7 +1006,7 @@
 			height: 70px;
 			display: block;
 			position: absolute;
-			right: 0;
+			inset-inline-end: 0;
 			top: 0;
 			border-radius: 10px;
 			background-color: #fff;
@@ -1032,7 +1032,7 @@
 			margin-bottom: 25px;
 			position: relative;
 			padding-bottom: 25px;
-			margin-right: 55px;
+			margin-inline-end: 55px;
 			
 			&:after{
 				content: "";
@@ -1041,7 +1041,7 @@
 				background: linear-gradient(to right, var(--bs-secondary) 0, rgba(0, 0, 0, 0) 100%);
 				position: absolute;
 				opacity: 0.3;
-				left: 0;
+				inset-inline-start: 0;
 				bottom: 0;
 				@include transitionMedium;
 			}
@@ -1055,7 +1055,7 @@
 			mask-image: url(../images/bg03.svg);
 			-webkit-mask-image: url(../images/bg03.svg);
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			width: 100%;
 			height: 100%;
@@ -1216,8 +1216,8 @@
 			}
 		}
 		@include respond('phone'){
-			margin-left: 0;
-			margin-right: 0;
+			margin-inline-start: 0;
+			margin-inline-end: 0;
 		}
 	}
 	
@@ -1237,7 +1237,7 @@
 			height: calc(100% - 50px);
 			position: absolute;
 			background-color: var(--bs-primary);
-			right: 0;
+			inset-inline-end: 0;
 			top: 50%;
 			transform: translateY(-50%);
 			border-radius: 10px 0 0 10px;
@@ -1399,8 +1399,8 @@
 			}
 		}
 		@include respond('phone'){
-			margin-left: 0;
-			margin-right: 0;
+			margin-inline-start: 0;
+			margin-inline-end: 0;
 		}
 	}
 
