--- a/assets/scss/components/_info-widget.scss
+++ b/assets/scss/components/_info-widget.scss
@@ -85,7 +85,7 @@
 			background-color: #fff;
 			border-radius: 15px 15px 0 15px;
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			box-shadow: -20px 10px 50px rgba(var(--bs-secondary-rgb), 0.1);
 			
@@ -103,11 +103,11 @@
 			}
 			&::before{
 				bottom: 0;
-				right: -20px;
+				inset-inline-end: -20px;
 			}
 			&::after{
 				bottom: -20px;
-				right: 0;
+				inset-inline-end: 0;
 				transform: rotate(180deg);
 			}
 		}
@@ -203,7 +203,7 @@
 			justify-content: center;
 			border: 3px solid #fff;
 			position: absolute;
-			right: -30px;
+			inset-inline-end: -30px;
 			top: -30px;
 			padding: 10px
 		}
@@ -223,7 +223,7 @@
 			.info-icon{
 				width: 50px;
 				height: 50px;
-				right: -20px;
+				inset-inline-end: -20px;
 				top: -20px;
 			}
 		}
@@ -257,7 +257,7 @@
 			font-size: 16px;
 			text-transform: uppercase;
 			font-weight: 600;
-			margin-right: -30px;
+			margin-inline-end: -30px;
 		}
 		@include respond('laptop'){
 			.widget-media{
@@ -315,8 +315,8 @@
 				content: "";
 				position: absolute;
 				bottom: 0;
-				left: 0;
-				right: 0;
+				inset-inline-start: 0;
+				inset-inline-end: 0;
 				height: 1px;
 				background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2) 50%, rgba(255, 255, 255, 0) 0%);
 				background-size: 10px 1px;
@@ -474,23 +474,23 @@
 			}
 		}
 		.avatar-group{
-			padding-right: 25px;
-			margin-right: 25px;
-			border-right: 1px solid rgba(var(--bs-secondary-rgb), 0.1);
+			padding-inline-end: 25px;
+			margin-inline-end: 25px;
+			border-inline-end: 1px solid rgba(var(--bs-secondary-rgb), 0.1);
 		}
 		@include respond('tab-land'){
 			padding: 10px 30px 10px 15px;
 			min-height: 62px;
 			
 			.avatar-group{
-				padding-right: 10px;
-				margin-right: 10px;
+				padding-inline-end: 10px;
+				margin-inline-end: 10px;
 			}
 			span{
 				font-size: 14px;
 			}
 			&.m-r40{
-				margin-right: 20px;
+				margin-inline-end: 20px;
 			}
 		}
 		@include respond('phone'){
@@ -498,7 +498,7 @@
 			min-height: 55px;
 			
 			&.m-r40{
-				margin-right: 10px;
+				margin-inline-end: 10px;
 			}
 			span{
 				font-size: 12px;
@@ -591,7 +591,7 @@
 					background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, white 50%, rgba(0, 0, 0, 0) 100%);
 					opacity: 0.3;
 					position: absolute;
-					right: 0;
+					inset-inline-end: 0;
 					top: 0;
 				}
 			}
@@ -627,7 +627,7 @@
 					content: "";
 					height: 100%;
 					position: absolute;
-					right: 10px;
+					inset-inline-end: 10px;
 					top: 0;
 					width: 1px;
 					background-color: #000;
@@ -656,8 +656,8 @@
     backdrop-filter: blur(60px);
     height: 35px;
     border-radius: 30px;
-    left: 10px;
-    right: 10px;
+    inset-inline-start: 10px;
+    inset-inline-end: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
