--- a/assets/scss/components/_link-hover.scss
+++ b/assets/scss/components/_link-hover.scss
@@ -7,7 +7,7 @@
 		&:after{
 			content: "";
 			position: absolute;
-			right: -1px;
+			inset-inline-end: -1px;
 			bottom: 0;
 			height: 1px;
 			width: 0;
@@ -28,8 +28,8 @@
 				-webkit-transform-origin: right;
 				-ms-transform-origin: right;
 				-o-transform-origin: right;
-				right: auto;
-				left: 0;
+				inset-inline-end: auto;
+				inset-inline-start: 0;
 			}
 		}
 	}
@@ -43,7 +43,7 @@
 		&:after{
 			content: "";
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			bottom: -1px;
 			height: 1px;
 			width: 100%;
@@ -117,7 +117,7 @@
 			content: "";
 			top: 0;
 			bottom: 0;
-			left: 0;
+			inset-inline-start: 0;
 			opacity: 0;
 			background: var(--bs-primary);
 			margin: auto;
