--- a/assets/scss/components/_list-group.scss
+++ b/assets/scss/components/_list-group.scss
@@ -196,7 +196,7 @@ ul{
 				border-radius: 50% 50% 0% 50%;
 				box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
 				top: 9px;
-				left: 0;
+				inset-inline-start: 0;
 				font-size: 12px;
 			}
 		}
@@ -218,7 +218,7 @@ ul{
 				border-radius: 50% 50% 0% 50%;
 				box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
 				top: 7px;
-				left: 0;
+				inset-inline-start: 0;
 				font-size: 12px;
 			}
 		}
@@ -397,7 +397,7 @@ ul{
 			line-height: 60px;
 			text-align: center;
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			background-color: #fff;
 			border-radius: 50%;
 			top: 10px;
@@ -486,13 +486,13 @@ ul{
 			line-height: 80px;
 			text-align: center;
 			position: absolute;
-			left: 25px;
+			inset-inline-start: 25px;
 			background: var(--gradient-primary);
 			border-radius: 50%;
 			top: 20px;
 			font-size: 35px;
 			@include respond ('phone'){
-				left: 10px;
+				inset-inline-start: 10px;
 			}
 		}
 		.title{
@@ -583,7 +583,7 @@ ul{
 			font-family: flaticon;
 			color: var(--bs-primary);
 			line-height: normal;
-			left: 20px;
+			inset-inline-start: 20px;
 			top: 14px;
 			font-size: 20px;
 		}
