--- a/assets/scss/components/_main-slider.scss
+++ b/assets/scss/components/_main-slider.scss
@@ -25,7 +25,7 @@
 			writing-mode: tb;
 			transform: rotate(-180deg) translateY(50%);
 			position: absolute;
-			left: 50px;
+			inset-inline-start: 50px;
 			top: 50%;
 		}
 		.text{
@@ -35,7 +35,7 @@
 			margin-bottom: 35px;
 		}
 		.hero-content{
-			margin-left: -50px;
+			margin-inline-start: -50px;
 		}
 		.circle-wrapper{
 			width: 100%;
@@ -51,7 +51,7 @@
 				display: block;
 				position: absolute;
 				top: 50%;
-				left: 50%;
+				inset-inline-start: 50%;
 				transform: translate(-50%, -50%);
 				aspect-ratio: 1 / 1;
 				border: 2px solid rgba(255, 255, 255, 0.6);
@@ -79,7 +79,7 @@
 			.thumbnail{
 				position: absolute;
 				bottom: 0;
-				left: 50%;
+				inset-inline-start: 50%;
 				transform: translateX(-50%);
 				z-index: 2;
 			}
@@ -90,7 +90,7 @@
 			border-radius: 25px;
 			box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
 			position: absolute;
-			right: 55px;
+			inset-inline-end: 55px;
 			top: 120px;
 			display: flex;
 			align-items: center;
@@ -99,25 +99,25 @@
 		}
 		.item2{
 			position: absolute;
-			left: -80px;
+			inset-inline-start: -80px;
 			top: 78%;
 			z-index: 3;
 		}
 		.item3{
 			position: absolute;
 			top: 170px;
-			left: 50px;
+			inset-inline-start: 50px;
 			z-index: 4;
 		}
 		.item4{
 			position: absolute;
-			right: -30px;
+			inset-inline-end: -30px;
 			bottom: 60px;
 			z-index: 3;
 		}
 		.item5{
 			position: absolute;
-			left: 50px;
+			inset-inline-start: 50px;
 			bottom: 50px;
 			z-index: 3;
 		}
@@ -139,20 +139,20 @@
 				}
 			}
 			.hero-content{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			.text-vertical{
-				left: 30px;
+				inset-inline-start: 30px;
 			}
 			.item3{
 				top: 150px;
-				left: 20px;
+				inset-inline-start: 20px;
 			}
 			.item4{
-				right: 30px;
+				inset-inline-end: 30px;
 			}
 			.item1{
-				right: 70px;
+				inset-inline-end: 70px;
 				top: 80px;
 				padding: 18px;
 				width: 60px;
@@ -162,10 +162,10 @@
 		}
 		@media only screen and (max-width: 1380px){
 			.hero-content{
-				margin-left: -50px;
+				margin-inline-start: -50px;
 			}
 			.hero-thumbnail{
-				margin-left: -40px;
+				margin-inline-start: -40px;
 			}
 		}
 		@media only screen and (max-width: 1280px){
@@ -180,7 +180,7 @@
 			height: 580px;
 			
 			.hero-content{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			.title{
 				font-size: 48px;
@@ -200,8 +200,8 @@
 			padding-top: 50px;
 			
 			.hero-thumbnail{
-				margin-left: auto;
-				margin-right: auto;
+				margin-inline-start: auto;
+				margin-inline-end: auto;
 				margin-top: 30px;
 			}
 		}
@@ -220,7 +220,7 @@
 				padding: 14px 18px;
 				border-radius: 10px;
 				font-size: 16px;
-				margin-right: 5px;
+				margin-inline-end: 5px;
 					
 				.right-icon,
 				.left-icon{
@@ -253,7 +253,7 @@
 			height: 100%;
 			position: absolute;
 			width: 100%;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			z-index: -1;
 		}
@@ -265,7 +265,7 @@
 		.banner-shape{
 			position: absolute;
 			bottom: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 100%;
 			height: auto;
 			z-index: 2;
@@ -285,15 +285,15 @@
 		}
 		.banner-shape4{
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 		}
 		.banner-shape5{
 			top: 0;
-			right: 0;
+			inset-inline-end: 0;
 		}
 		.banner-shape6{
 			bottom: -150px;
-			left: 30px;
+			inset-inline-start: 30px;
 		}
 		.circle-wrapper{
 			width: 85%;
@@ -301,7 +301,7 @@
 			position: absolute;
 			z-index: -1;
 			bottom: -10%;
-			left: -35px;
+			inset-inline-start: -35px;
 			border-radius: 50%;
 			background-image: linear-gradient(to bottom, rgba(var(--bs-primary-rgb), 0.15) 0%, rgba(255, 243, 248, 0) 80%);
 			backdrop-filter: blur(20px);
@@ -310,7 +310,7 @@
 			position: relative;
 			width: 850px;
 			height: 850px;
-			padding-left: 30px;
+			padding-inline-start: 30px;
 		}
 		.smile{
 			position: relative;
@@ -318,7 +318,7 @@
 			svg{
 				position: absolute;
 				bottom: -30px;
-				left: 50%;
+				inset-inline-start: 50%;
 				transform: translateX(-50%);
 			}
 		}
@@ -332,18 +332,18 @@
 		}
 		.item1{
 			bottom: 100px;
-			left: 70px;
+			inset-inline-start: 70px;
 		}
 		.item2{
 			top: 200px;
-			left: 70px;
+			inset-inline-start: 70px;
 		}
 		.item3{
-			left: -60px;
+			inset-inline-start: -60px;
 			top: 40%;
 		}
 		.item4{
-			right: 200px;
+			inset-inline-end: 200px;
 			top: 30%;
 			width: 110px;
 			height: 110px;
@@ -358,7 +358,7 @@
 			}
 		}
 		.item5{
-			left: 50px;
+			inset-inline-start: 50px;
 			top: 15%;
 			width: 148px;
 			height: 148px;
@@ -373,7 +373,7 @@
 			}
 		}
 		.item6{
-			right: 16%;
+			inset-inline-end: 16%;
 			bottom: 130px;
 			width: 260px;
 		}
@@ -383,7 +383,7 @@
 		}
 		@include respond('wide-desktop'){
 			.hero-thumbnail{
-				padding-left: 0;
+				padding-inline-start: 0;
 			}
 			.item2{
 				width: 80px;
@@ -392,12 +392,12 @@
 				width: 80px;
 			}
 			.item3{
-				left: -35px;
+				inset-inline-start: -35px;
 				top: 45%;
 				width: 80px;
 			}
 			.item4{
-				right: 245px;
+				inset-inline-end: 245px;
 				top: 30%;
 				width: 80px;
 				height: 80px;
@@ -432,17 +432,17 @@
 				height: 35px;
 			}
 			.hero-thumbnail{
-				margin-left: -50px;
+				margin-inline-start: -50px;
 			}
 			.info-widget.style-12 {
-				margin-right: 20px;
+				margin-inline-end: 20px;
 			}
 		}
 		@include respond('tab-land'){
 			height: 800px;
 			
 			.hero-content{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			.smile svg{
 				bottom: -15px;
@@ -460,7 +460,7 @@
 			.hero-thumbnail{
 				width: 650px;
 				height: 650px;
-				margin-left: -20px;
+				margin-inline-start: -20px;
 				
 				& > img{
 					width: 75%;
@@ -470,7 +470,7 @@
 				display: none;
 			}
 			.item4{
-				right: 165px;				
+				inset-inline-end: 165px;				
 				width: 60px;
 				height: 60px;
 				
@@ -505,8 +505,8 @@
 			.hero-thumbnail{
 				width: 100%;
 				height: auto;
-				margin-left: auto;
-				margin-right: auto;
+				margin-inline-start: auto;
+				margin-inline-end: auto;
 				text-align: center;
 				margin-top: 30px;
 				
@@ -515,17 +515,17 @@
 				}
 			}
 			.circle-wrapper{
-				left: 50%;
+				inset-inline-start: 50%;
 				transform: translateX(-50%);
 			}
 			.item5{
 				top: 38%;
 			}
 			.item4{
-				right: 110px;
+				inset-inline-end: 110px;
 			}
 			.item3{
-				left: 25px;
+				inset-inline-start: 25px;
 				top: 65%;
 			}
 			.banner-shape4,
@@ -539,13 +539,13 @@
 				font-size: 42px;
 			}
 			.item4{
-				right: 60px;
+				inset-inline-end: 60px;
 			}
 			.item5{
 				top: 28%;
 			}
 			.item3{
-				left: 5px;
+				inset-inline-start: 5px;
 				top: 64%;
 			}
 		}
@@ -570,15 +570,15 @@
 				width: 100%;				
 			}
 			.item3{
-				left: -20px;
+				inset-inline-start: -20px;
 				top: 60%;
 			}
 			.item4{
-				right: 10px;
+				inset-inline-end: 10px;
 			}
 			.item5{
 				top: 20%;
-				left: 15px;
+				inset-inline-start: 15px;
 			}
 		}
 	}
@@ -595,7 +595,7 @@
 			height: 100%;
 			position: absolute;
 			bottom: 0;
-			right: 0;
+			inset-inline-end: 0;
 			z-index: -1;
 			background-image: url(../../skincare/images/hero-banner/bg.png);
 			background-repeat: no-repeat;
@@ -613,12 +613,12 @@
 			margin-bottom: 30px;
 		}
 		.hero-content{
-			margin-right: -30px;
+			margin-inline-end: -30px;
 		}
 		.banner-shape{
 			position: absolute;
 			bottom: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 100%;
 			height: auto;
 			z-index: 2;
@@ -633,10 +633,10 @@
 			filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.01));
 		}
 		.banner-shape2{
-			left: 0;
+			inset-inline-start: 0;
 		}
 		.banner-shape3{
-			right: 0;
+			inset-inline-end: 0;
 			transform: rotateY(180deg);
 		}
 		.banner-shape4,
@@ -654,26 +654,26 @@
 		}
 		.banner-shape4{
 			top: 10%;
-			left: -100px;
+			inset-inline-start: -100px;
 			opacity: 0.2;
 		}
 		.banner-shape5{
 			bottom: -100px;
-			right: -100px;
+			inset-inline-end: -100px;
 		}
 		.banner-shape6{
 			bottom: -150px;
-			left: 30%;
+			inset-inline-start: 30%;
 			opacity: 0.2;
 		}
 		.hero-thumbnail{
 			position: relative;
 			width: 750px;
-			margin-left: 50px;
+			margin-inline-start: 50px;
 		}
 		.item1{
 			position: absolute;
-			right: 35px;
+			inset-inline-end: 35px;
 			top: 50%;
 			writing-mode: tb;
 			transform: rotate(-180deg) translateY(50%);
@@ -684,13 +684,13 @@
 		}
 		.item2{
 			top: 15%;
-			left: 7%;
+			inset-inline-start: 7%;
 			position: absolute;
 		}
 		.item3{
 			position: absolute;
 			bottom: 6%;
-			left: 42%;
+			inset-inline-start: 42%;
 			
 			img{
 				border-radius: 0 0 65% 0;
@@ -701,7 +701,7 @@
 		}
 		.item4{
 			bottom: 50px;
-			left: 80px;
+			inset-inline-start: 80px;
 			position: absolute;
 			
 			img{
@@ -725,13 +725,13 @@
 		}
 		.shape1{
 			top: 18%;
-			right: 38%;
+			inset-inline-end: 38%;
 			width: 60px;
 		}
 		.shape2{
 			width: 30px;
 			top: 48%;
-			right: 8%;
+			inset-inline-end: 8%;
 		}
 		@keyframes identifier{
 			0% {
@@ -749,18 +749,18 @@
 		.item5{
 			position: absolute;
 			bottom: 80px;
-			right: 20px;
+			inset-inline-end: 20px;
 		}
 		
 		@include respond('wide-desktop'){
 			.hero-thumbnail{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			.item2{
 				top: 12%;				
 			}
 			.item5{
-				right: -40px;
+				inset-inline-end: -40px;
 			}
 		}
 		@include respond('laptop'){
@@ -770,8 +770,8 @@
 				font-size: 60px;
 			}
 			.hero-content{
-				margin-right: 0;
-				margin-left: 40px;
+				margin-inline-end: 0;
+				margin-inline-start: 40px;
 			}
 			.hero-thumbnail{
 				width: 650px;
@@ -781,7 +781,7 @@
 			height: 820px;
 		
 			.hero-content{
-				margin-left: 30px;
+				margin-inline-start: 30px;
 			}
 			.hero-thumbnail{
 				width: 580px;
@@ -807,7 +807,7 @@
 				width: 420px;
 			}
 			.hero-content{
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			.item1,
 			.item2,
@@ -824,7 +824,7 @@
 			}
 			.hero-thumbnail{
 				width: 350px;
-				margin-left: -30px;
+				margin-inline-start: -30px;
 			}
 			.shape1{
 				width: 30px;
@@ -852,8 +852,8 @@
 				margin-bottom: 30px;
 			}
 			.hero-thumbnail{
-				margin-left: auto;
-				margin-right: auto;
+				margin-inline-start: auto;
+				margin-inline-end: auto;
 			}
 		}
 		@include respond('phone'){
@@ -870,12 +870,12 @@
 			}
 			.shape1{
 				top: 10%;
-				right: 80%;
+				inset-inline-end: 80%;
 				width: 20px;
 			}
 			.item5{
 				bottom: 20px;
-				right: -30px;
+				inset-inline-end: -30px;
 			}
 		}
 	}
@@ -909,11 +909,11 @@
 
 		.hero-content{
 			@include respond("laptop"){
-				margin-right: 0;
-				margin-left: 40px;
+				margin-inline-end: 0;
+				margin-inline-start: 40px;
 			}
 			@include respond("tab-land"){
-				margin-left: 0;
+				margin-inline-start: 0;
 			}
 			@include respond("phone-land"){
 				margin-bottom: 30px;
@@ -924,7 +924,7 @@
 			content: "";
 			position: absolute;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			background: rgba(126, 107, 89, 0.35);
 			filter: blur(8px);
 			width: 50%;
@@ -1017,11 +1017,11 @@
 	// 		position: relative;
 	// 		z-index: 1;
 	// 		@include respond("laptop"){
-	// 			margin-right: 0;
-	// 			margin-left: 40px;
+	// 			margin-inline-end: 0;
+	// 			margin-inline-start: 40px;
 	// 		}
 	// 		@include respond("tab-land"){
-	// 			margin-left: 0;
+	// 			margin-inline-start: 0;
 	// 		}
 	// 		@include respond("phone-land"){
 	// 			margin-bottom: 30px;
@@ -1032,7 +1032,7 @@
 	// 		content: "";
 	// 		position: absolute;
 	// 		top: 0;
-	// 		left: 0;
+	// 		inset-inline-start: 0;
 	// 		background: var(--bs-primary);
 	// 		opacity: 0.070;
 	// 		width: 100%;
@@ -1046,7 +1046,7 @@
 	// 		position: absolute;
 	// 		content: "";
 	// 		top: 0;
-	// 		left: 0;
+	// 		inset-inline-start: 0;
 	// 		width: 50%;
 	// 		height: 100%;
 	// 		position: absolute;
@@ -1224,7 +1224,7 @@
 		content: '';
 		position: absolute;
 		top: 0;
-		left: 0;
+		inset-inline-start: 0;
 		width: 100%;
 		height: 100%;
 		z-index: -1;
@@ -1238,7 +1238,7 @@
 		display: block;
 		position: absolute;
 		top: 10px;
-		left: 10px;
+		inset-inline-start: 10px;
 		height: calc(160px / 2);
 		width: 160px;
 		text-transform: uppercase;
@@ -1290,7 +1290,7 @@
 			height: calc(110px / 2);
 			width: 110px;
 			top: 5px;
-			left: 5px;
+			inset-inline-start: 5px;
 		}
 		i{
 			font-size: 16px;
@@ -1313,7 +1313,7 @@
 		height: 100%;
 		border: 1px solid #fff;
 		border-radius: 50%;
-		left: 0;
+		inset-inline-start: 0;
 		top: 0;
 	}
 	&:before{
@@ -1353,12 +1353,12 @@
 		writing-mode: tb-rl;
 	}
 	&.left{
-		left: 0;
-		border-right: 1px solid rgba(0, 0, 0, 0.1);
+		inset-inline-start: 0;
+		border-inline-end: 1px solid rgba(0, 0, 0, 0.1);
 	}
 	&.right{
-		right: 0;
-		border-left: 1px solid rgba(0, 0, 0, 0.1);
+		inset-inline-end: 0;
+		border-inline-start: 1px solid rgba(0, 0, 0, 0.1);
 	}
 	.social-list{
 		display: flex;
