--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -1,14 +1,14 @@
 .pagination{
-	margin-left: -5px;
-	margin-right: -5px;
+	margin-inline-start: -5px;
+	margin-inline-end: -5px;
 	flex-wrap: wrap;
 	
 	&.text-center{
 		justify-content: center;
 	}
 	li{
-		padding-left: 5px;
-		padding-right: 5px;
+		padding-inline-start: 5px;
+		padding-inline-end: 5px;
 		
 		.page-numbers,
 		.page-link{
