--- a/assets/scss/components/_separator.scss
+++ b/assets/scss/components/_separator.scss
@@ -120,9 +120,9 @@
 			border-bottom: 1px solid #DCD6CE;
 			width: 100%;
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 50%;
-			right: 0;
+			inset-inline-end: 0;
 			transform: translateY(-50%);
 		}
 		.btn{
@@ -168,8 +168,8 @@
 			font-weight: 500;
 		}
 		.btn{
-			padding-left: 40px;
-			padding-right: 40px;
+			padding-inline-start: 40px;
+			padding-inline-end: 40px;
 			font-weight: 600;
 			letter-spacing: 0.1px;
 		}
@@ -179,8 +179,8 @@
 			text-align: center;
 			
 			.btn{
-				padding-left: 25px;
-				padding-right: 25px;
+				padding-inline-start: 25px;
+				padding-inline-end: 25px;
 				letter-spacing: 0;
 				font-size: 13px;
 			}
