--- a/assets/scss/components/_tempus-dominus.scss
+++ b/assets/scss/components/_tempus-dominus.scss
@@ -326,7 +326,7 @@
 
 		#prev-month{
 			border-radius: 10px 0 0 10px;
-			border-right: 1px solid var(--bs-body-color);
+			border-inline-end: 1px solid var(--bs-body-color);
 		}
 
 		&:first-child{
@@ -334,7 +334,7 @@
 			border-bottom-right-radius: 0;
 		}
 		&:not(:last-child) {
-			margin-right: -1px;
+			margin-inline-end: -1px;
 		}
 		&:last-child {
 			border-top-left-radius: 0;
