--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -18,8 +18,8 @@
 			
 			.video-bx1{
 				bottom: 10px;
-				right: 8px;
-				left: 8px;
+				inset-inline-end: 8px;
+				inset-inline-start: 8px;
 				position: absolute;
 			}
 		}
@@ -56,7 +56,7 @@
 			background-repeat: no-repeat;
 			background-size: 100%;
 			position: absolute;
-			right: 30px;
+			inset-inline-end: 30px;
 			bottom: 35px;
 			z-index: -1;
 			opacity: 0.05;
@@ -157,8 +157,8 @@
 		.video-bx1{
 			position: absolute;
 			bottom: 20px;
-			left: 20px;
-			right: 20px;
+			inset-inline-start: 20px;
+			inset-inline-end: 20px;
 			
 			.video-btn{
 				position: unset;
@@ -168,7 +168,7 @@
 		.video-btn{
 			position: absolute;
 			top: 50%;
-			left: 50%;
+			inset-inline-start: 50%;
 			transform: translate(-50%, -50%);
 			width: 60px;
 			height: 60px;
@@ -219,7 +219,7 @@
 			content: "\f105";
 			font-family: 'flaticon';
 			position: absolute;
-			right: 25px;
+			inset-inline-end: 25px;
 			bottom: 30px;
 			z-index: -1;
 			font-weight: 500;
@@ -297,7 +297,7 @@
 			&::after {
 				bottom: 25px;
 				font-size: 40px;
-				right: 15px;
+				inset-inline-end: 15px;
 			}
 		}
 		.testimonial-media{
@@ -305,8 +305,8 @@
 			
 			.video-bx1{
 				bottom: 12px;
-				left: 12px;
-				right: 12px;
+				inset-inline-start: 12px;
+				inset-inline-end: 12px;
 			}
 		}
 		.testimonial-info{
@@ -366,13 +366,13 @@
 	}
 }
 .testimonial-wrapper2{
-	margin-right: -20px;
+	margin-inline-end: -20px;
 	
 	.swiper-slide{
 	    padding: 10px;
 	}
 	@include respond('phone'){
-		margin-right: 0;
+		margin-inline-end: 0;
 	}
 }
 
@@ -400,7 +400,7 @@
 		.item1{
 			position: absolute;
 			bottom: 10%;
-			left: -13%;
+			inset-inline-start: -13%;
 			
 			.info-widget{
 				width: 230px;
@@ -458,7 +458,7 @@
 			content: "\f106";
 			font-family: 'flaticon';
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 			font-weight: 500;
 			font-size: 65px;
@@ -554,8 +554,8 @@
 			
 			.item1{
 				bottom: 10px;
-				left: 10px;
-				right: 10px;
+				inset-inline-start: 10px;
+				inset-inline-end: 10px;
 				
 				.info-widget {
 					width: 100%;
@@ -613,14 +613,14 @@
 }
 
 .testimonial-wrapper3{
-	margin-right: -20px;
+	margin-inline-end: -20px;
 	
 	.swiper-slide{
 	    padding: 10px;
 	}
 	.swiper-pagination{
 		position: absolute;
-		left: 10px;
+		inset-inline-start: 10px;
 		width: auto;
 		bottom: 10px;
 	}
@@ -633,7 +633,7 @@
 		}
 	}
 	@include respond('phone'){
-		margin-right: 0;
+		margin-inline-end: 0;
 	}
 }
 
@@ -753,7 +753,7 @@
 		border-radius: 50%;
 		z-index: 1;
 		top: 50%;
-		left: 50%;
+		inset-inline-start: 50%;
 		transform: translate(-50%, -50%);
 		
 		&:before,
@@ -831,7 +831,7 @@
 		align-items: center;
 		gap: 15px;
 		position: relative;
-		padding-right: 100px;
+		padding-inline-end: 100px;
 		
 		.dz-media{
 			width: 60px;
@@ -859,7 +859,7 @@
 			content: "\f105";
 			font-family: 'flaticon';
 			position: absolute;
-			right: 15px;
+			inset-inline-end: 15px;
 			top: 0;
 			font-weight: 500;
 			font-size: 65px;
@@ -867,13 +867,13 @@
 			color: var(--bs-primary);
 		}
 		@include respond('tab-port'){
-			padding-right: 70px;
+			padding-inline-end: 70px;
 			
 			.testimonial-name {
 				font-size: 16px;
 			}
 			&::after{
-				right: 0;
+				inset-inline-end: 0;
 				top: -3px;
 				font-size: 48px;
 				line-height: 48px;
@@ -912,7 +912,7 @@
 		content: "\f106";
 		font-family: 'flaticon';
 		position: absolute;
-		left: 60px;
+		inset-inline-start: 60px;
 		top: 30px;
 		font-weight: 500;
 		font-size: 65px;
@@ -934,7 +934,7 @@
 			}
 		}
 		.testimonial-rating{
-			margin-left: auto;
+			margin-inline-start: auto;
 
 			ul li i{
 				font-size: 22px;
@@ -963,7 +963,7 @@
 			font-size: 18px;
 		}
 		&::after{
-			left: 35px;
+			inset-inline-start: 35px;
 			top: 25px;
 			font-size: 50px;
 			line-height: 50px;
@@ -982,7 +982,7 @@
 			font-size: 16px;
 		}
 		&::after{
-			left: 25px;
+			inset-inline-start: 25px;
 			top: 18px;
 			font-size: 45px;
 			line-height: 45px;
@@ -997,8 +997,8 @@
 
 
 .testimonial-wrapper7 {
-	margin-left: -55px;
-	margin-right: -55px;
+	margin-inline-start: -55px;
+	margin-inline-end: -55px;
 
 	@include respond("laptop"){
 		margin: 0;
@@ -1014,7 +1014,7 @@
 		position: absolute;
 		width: 100%;
 		height: calc(100% - 20px);
-		left: 0;
+		inset-inline-start: 0;
 		top: 0;
 		border-radius: 60px;
 
@@ -1036,7 +1036,7 @@
 
 
 	.swiper-pagination{
-		left: 60px !important;
+		inset-inline-start: 60px !important;
 		bottom: 60px !important;
 		width: auto;
 		position: absolute;
@@ -1047,7 +1047,7 @@
 		}
 		@include respond("tab-port"){
 			bottom: 0px !important;
-        	left: 50% !important;
+        	inset-inline-start: 50% !important;
         	transform: translate(-50%, -50%);
 		}
 	}
@@ -1131,7 +1131,7 @@
 				background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
 				position: absolute;
 				opacity: 0.3;
-				left: 0;
+				inset-inline-start: 0;
 				bottom: 0;
 				-webkit-transition: all 0.5s;
 				-ms-transition: all 0.5s;
@@ -1141,7 +1141,7 @@
 			i{
 				font-size: 60px;
 				color: #fff;
-				margin-right: 18px;
+				margin-inline-end: 18px;
 			}
 			.title{
 				color: #fff;
