--- a/assets/scss/components/_timeline.scss
+++ b/assets/scss/components/_timeline.scss
@@ -9,7 +9,7 @@
 			width: 100%;
 			position: absolute;
 			top: 30px;
-			left: 0;
+			inset-inline-start: 0;
 			background-position: center;
 			background-size: cover;
 			opacity: 0.5;
@@ -26,16 +26,16 @@
 		}
 		.timeline-inner{
 			display: flex;
-			margin-left: -70px;
-			margin-right: -70px;
+			margin-inline-start: -70px;
+			margin-inline-end: -70px;
 			position: relative;
 			padding-top: 30px;
 			justify-content: space-between;
 			gap: 50px;
 
 			@include respond('laptop'){
-				margin-left: 0;
-				margin-right: 0;
+				margin-inline-start: 0;
+				margin-inline-end: 0;
 			}
 			@include respond('tab-land'){
 				gap: 30px;
@@ -46,8 +46,8 @@
 		}
 		.timeline-wrap{
 			width: 330px;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-inline-start: 10px;
+			padding-inline-end: 10px;
 			position: relative;
 			padding-top: 110px;
 			transform: translateY(-30px);
@@ -79,8 +79,8 @@
 			}
 			@include respond('tab-port'){
 				padding-top: 0;
-				padding-left: 70px;
-				padding-right: 0;
+				padding-inline-start: 70px;
+				padding-inline-end: 0;
 				transform: translateY(0);
 				margin-bottom: 20px;
 				
@@ -91,7 +91,7 @@
 				}
 			}
 			@include respond('phone'){
-				padding-left: 55px;
+				padding-inline-start: 55px;
 			}
 		}
 		.timeline-left,
@@ -145,7 +145,7 @@
 			margin-bottom: 30px;
 			position: absolute;
 			top: 0;
-			left: 50%;
+			inset-inline-start: 50%;
 			transform: translateX(-50%);
 			
 			.step{
@@ -158,7 +158,7 @@
 				}
 			}
 			@include respond('tab-port'){
-				left: 0;
+				inset-inline-start: 0;
 				transform: translateX(0);
 			}
 			@include respond('phone'){
@@ -177,8 +177,8 @@
 			color: #fff;
 			font-weight: 500;
 			font-size: 24px;
-			margin-left: auto;
-			margin-right: auto;
+			margin-inline-start: auto;
+			margin-inline-end: auto;
 			margin-bottom: 5px;
 			
 			@include respond('laptop'){
@@ -196,7 +196,7 @@
 		}
 		.timeline-line{
 			position: absolute;
-			left: 50%;
+			inset-inline-start: 50%;
 			width: 100vw;
 			transform: translateX(-50%);
 			top: 28px;
@@ -251,13 +251,13 @@
 					width: 1px;
 					height: 100%;
 					top: 30px;
-					left: 23px;
+					inset-inline-start: 23px;
 					top: 0;
 				}
 			}
 			@include respond('phone'){
 				&:after {
-					left: 20px;
+					inset-inline-start: 20px;
 				}
 			}
 		}
@@ -271,8 +271,8 @@
 			color: #fff;
 			font-weight: 500;
 			font-size: 24px;
-			margin-left: auto;
-			margin-right: auto;
+			margin-inline-start: auto;
+			margin-inline-end: auto;
 			margin-bottom: 5px;
 			
 			@include respond('laptop'){
@@ -305,15 +305,15 @@
 			}
 		}
 		.timeline-info{
-			padding-left: 15px;
-			padding-right: 15px;
+			padding-inline-start: 15px;
+			padding-inline-end: 15px;
 			
 			@include respond('tab-port'){
-				padding-left: 65px;
-				padding-right: 0;
+				padding-inline-start: 65px;
+				padding-inline-end: 0;
 			}
 			@include respond('phone'){
-				padding-left: 55px;
+				padding-inline-start: 55px;
 			}
 		}
 		@include respond('laptop'){
@@ -333,7 +333,7 @@
 			}
 			.timeline-head{
 				position: absolute;
-				left: 0;			
+				inset-inline-start: 0;			
 			}
 		}
 		@include respond('phone'){
