--- a/assets/scss/components/_twentytwenty.scss
+++ b/assets/scss/components/_twentytwenty.scss
@@ -26,7 +26,7 @@
 			content: "BEFORE";
 			position: absolute;
 			top: 50%;
-			left: 30px;
+			inset-inline-start: 30px;
 			z-index: 99;
 			padding: 34px 8px;
 			background-color: rgba(255, 255, 255, 0.2);
@@ -45,8 +45,8 @@
         }
         &::after{
             content: "AFTER";
-            right: 30px;
-            left: auto;
+            inset-inline-end: 30px;
+            inset-inline-start: auto;
         }
 		@include respond('phone-land'){
 			&::before,
@@ -56,10 +56,10 @@
 				width: 40px;
 			}
 			&::before{
-				left: 20px;
+				inset-inline-start: 20px;
 			}
 			&::after{
-				right: 20px;
+				inset-inline-end: 20px;
 			}
 		}
 		@include respond('phone'){
@@ -70,10 +70,10 @@
 				width: 32px;
 			}
 			&::before{
-				left: 10px;
+				inset-inline-start: 10px;
 			}
 			&::after{
-				right: 10px;
+				inset-inline-end: 10px;
 			}
 		}
 	}
@@ -113,7 +113,7 @@
 			}				
 		}
 		.twentytwenty-left-arrow{
-			left: 0;
+			inset-inline-start: 0;
 			margin: 0 0 0 12px;
 			&:before{
 				content: "\f0d9";
@@ -121,7 +121,7 @@
 			}
 		}
 		.twentytwenty-right-arrow{
-			right: 0;
+			inset-inline-end: 0;
 			margin: 0 12px 0 0;
 			&:before{
 				content: "\f0da";
