--- a/assets/scss/layout/footer/_footer-1.scss
+++ b/assets/scss/layout/footer/_footer-1.scss
@@ -36,11 +36,11 @@
 		.item1{
 			z-index: 99;
 			position: absolute;
-			right: 50px;
+			inset-inline-end: 50px;
 			bottom: 200px;
 			
 			@include respond('wide-desktop'){
-				right: 20px;
+				inset-inline-end: 20px;
 				bottom: 250px;
 			}
 			@include respond('laptop'){
@@ -79,10 +79,10 @@
 			font-weight: 500;
 		}	
 		.widget_services{
-			padding-left: 30px;
+			padding-inline-start: 30px;
 			
 			@include custommq ($max:1380px){
-				padding-left: 0;				
+				padding-inline-start: 0;				
 			}
 		}
 		.footer-middle{
@@ -161,9 +161,9 @@
 			&.widget_services{
 				ul{
 					li{
-						padding-left: 1.8rem;
+						padding-inline-start: 1.8rem;
 						transition: 0.5s;
-						left: 0;
+						inset-inline-start: 0;
 						a{
 							&::before{
 								position: absolute;
@@ -172,7 +172,7 @@
 								height: 18px;
 								background-size: contain;
 								background-image: url('data:image/svg+xml,<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(%23clip0_16165_1651)"><path d="M17.7938 8.50229C17.7936 8.50208 17.7934 8.50183 17.7931 8.50162L14.1192 4.84537C13.8439 4.57147 13.3988 4.57249 13.1248 4.84776C12.8508 5.123 12.8519 5.56818 13.1271 5.84212L15.5938 8.29687H0.703125C0.314789 8.29687 0 8.61166 0 9C0 9.38833 0.314789 9.70312 0.703125 9.70312H15.5938L13.1272 12.1579C12.8519 12.4318 12.8509 12.877 13.1248 13.1522C13.3988 13.4275 13.844 13.4285 14.1192 13.1546L17.7932 9.49837C17.7934 9.49816 17.7936 9.49791 17.7938 9.4977C18.0692 9.22285 18.0683 8.77623 17.7938 8.50229Z" fill="black"/></g><defs><clipPath id="clip0_16165_1651"><rect width="18" height="18" fill="white"/></clipPath></defs></svg>');
-								left: -26px;
+								inset-inline-start: -26px;
 							}
 							&:hover{
 								color: var(--bs-primary);
@@ -180,7 +180,7 @@
 						}
 
 						&:hover{
-							left: 10px;
+							inset-inline-start: 10px;
 						}
 					}
 				}
@@ -280,9 +280,9 @@
 				content: "";
 				position: absolute;
 				top: 1px;
-				left: 1px;
+				inset-inline-start: 1px;
 				bottom: 1px;
-				right: 1px;
+				inset-inline-end: 1px;
 				background-color: var(--bs-primary);
 				opacity: 0.4;
 				mix-blend-mode: color;
@@ -316,7 +316,7 @@
 					content: "";
 					position: absolute;
 					top: 0;
-					left: -50px;
+					inset-inline-start: -50px;
 					background-color: #fff;
 					border-radius: 15px;
 					width: calc(100% + 110px);
@@ -324,11 +324,11 @@
 					z-index: -1;
 					
 					@include respond("laptop"){
-						left: -20px;
+						inset-inline-start: -20px;
 						width: calc(100% + 40px);
 					}
 					@include respond("tab-land"){
-						left: 0;
+						inset-inline-start: 0;
 						width: 100%;
 					}
 				}
@@ -427,7 +427,7 @@
 
 		.footer-media{
 			position: relative;
-			margin-right: 55px;
+			margin-inline-end: 55px;
 			mix-blend-mode: darken;
 			margin-top: -45px;
 
@@ -435,23 +435,23 @@
 				content: "";
 				position: absolute;
 				top: 1px;
-				left: 1px;
+				inset-inline-start: 1px;
 				bottom: 1px;
-				right: 1px;
+				inset-inline-end: 1px;
 				background-color: var(--bs-primary);
 				opacity: 0.4;
 				mix-blend-mode: color;
 			}
 
 			@include respond("tab-land"){
-				margin-right: 0;
+				margin-inline-end: 0;
 			}
 		}
 
 		.footer-top{
 			padding-top: 80px;
-			padding-left: var(--spacing-x);
-			padding-right: var(--spacing-x);
+			padding-inline-start: var(--spacing-x);
+			padding-inline-end: var(--spacing-x);
 
 			@include respond("phone"){
 				padding-top: 50px;
@@ -472,7 +472,7 @@
 					content: "";
 					position: absolute;
 					top: 50%;
-					left: 50%;
+					inset-inline-start: 50%;
 					transform: translate(-50%, -50%);
 					background-color: #fff;
 					border-radius: 15px;
@@ -488,8 +488,8 @@
 			}
 		}
 		.footer-bottom{
-			padding-left: var(--spacing-x);
-			padding-right: var(--spacing-x);
+			padding-inline-start: var(--spacing-x);
+			padding-inline-end: var(--spacing-x);
 
 			.fb-inner{
 				padding: 24px 0px 30px;
@@ -544,7 +544,7 @@
 			padding: 30px 0;
 			border-top: 1px solid #D9D9D9;
 			position: absolute;
-			right: 20px;
+			inset-inline-end: 20px;
 			bottom: 0;
 			width: inherit;
 
@@ -641,7 +641,7 @@
 			content: "";
 			position: absolute;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 100%;
 			height: 100%;
 			z-index: -1;
@@ -698,7 +698,7 @@
 
 		.footer-media{
 			position: relative;
-			margin-right: 55px;
+			margin-inline-end: 55px;
 			mix-blend-mode: darken;
 			margin-top: -45px;
 
@@ -706,16 +706,16 @@
 				content: "";
 				position: absolute;
 				top: 1px;
-				left: 1px;
+				inset-inline-start: 1px;
 				bottom: 1px;
-				right: 1px;
+				inset-inline-end: 1px;
 				background-color: var(--bs-primary);
 				opacity: 0.4;
 				mix-blend-mode: color;
 			}
 
 			@include respond("tab-land"){
-				margin-right: 0;
+				margin-inline-end: 0;
 			}
 		}
 
@@ -763,7 +763,7 @@
 					content: "";
 					position: absolute;
 					top: 50%;
-					left: 50%;
+					inset-inline-start: 50%;
 					transform: translate(-50%, -50%);
 					background-color: #fff;
 					border-radius: 15px;
@@ -779,8 +779,8 @@
 			}
 		}
 		.footer-bottom{
-			padding-left: var(--spacing-x);
-			padding-right: var(--spacing-x);
+			padding-inline-start: var(--spacing-x);
+			padding-inline-end: var(--spacing-x);
 
 			.fb-inner{
 				padding: 30px 0px 30px;
@@ -838,7 +838,7 @@
 			padding: 30px 0;
 			border-top: 1px solid #D9D9D9;
 			position: absolute;
-			right: 20px;
+			inset-inline-end: 20px;
 			bottom: 0;
 			width: inherit;
 
