--- a/assets/scss/layout/header/_default.scss
+++ b/assets/scss/layout/header/_default.scss
@@ -22,10 +22,10 @@
 		height: 65px;
 	}
 	@include respond("tab-land"){
-		margin-right: 8px !important; 
+		margin-inline-end: 8px !important; 
 	}
 	@include respond('tab-port'){
-		margin-right: 0 !important; 
+		margin-inline-end: 0 !important; 
 	}
 	a{
 		display: table-cell;
@@ -210,7 +210,7 @@
 						.badge{						
 							position: absolute;
 							top: -4px;
-							right: 2px;
+							inset-inline-end: 2px;
 							font-size: 12px;
 							padding: 0px;
 							display: flex;
@@ -496,7 +496,7 @@
 	}
 	&.show:not(.mo-left):not(.mo-right){
 		@include respond('tab-port'){
-			left: 0;
+			inset-inline-start: 0;
 			@include transitionSlow;
 			margin:0;
 		}
@@ -549,7 +549,7 @@
 						i{
 							display: block;
 							font-size: 9px;
-							margin-left: 5px;
+							margin-inline-start: 5px;
 							margin-top: 0;
 							vertical-align: middle;
 							font-weight: 900;
@@ -561,7 +561,7 @@
 								color: #fff;
 								height: 30px;
 								line-height: 30px;
-								right: 0;
+								inset-inline-end: 0;
 								text-align: center;
 								width: 30px;
 								z-index: 3;
@@ -1291,17 +1291,17 @@
 		}
 	}
 	.mo-left{
-		left:-100%;
+		inset-inline-start: -100%;
 		
 		&.show {
-			left: 0;
+			inset-inline-start: 0;
 		}
 	}
 	.mo-right{
-		right:-100%;
+		inset-inline-end: -100%;
 		
 		&.show{
-			right: 0;
+			inset-inline-end: 0;
 		}
 	}
 }
@@ -1566,10 +1566,10 @@
 					color:var(--bs-heading-color) !important;
 					text-transform: capitalize;
 					> svg{
-						margin-right: 15px;
+						margin-inline-end: 15px;
 					}
 					> i{
-						margin-right: 15px;
+						margin-inline-end: 15px;
 						font-size: 18px;
 						color: var(--bs-primary);
 					}
@@ -1770,8 +1770,8 @@
 			}
 			@include respond('phone'){
 				padding-top: 10px;
-				padding-left: 10px;
-				padding-right: 10px;
+				padding-inline-start: 10px;
+				padding-inline-end: 10px;
 			}
 			.inner-bar {
 				z-index: 1;
@@ -1799,7 +1799,7 @@
 					}
 					@include respond('phone'){
 						width: calc(100% + 10px);
-						left: 15px;
+						inset-inline-start: 15px;
 					}
 				}
 			}
@@ -1829,7 +1829,7 @@
 			content: "";			
 			position: absolute;
 			top: 0;
-			left: 0;
+			inset-inline-start: 0;
 			width: 560px;
 			height: 160px;
 			z-index: -1;
@@ -1840,8 +1840,8 @@
 		}
 		&:after{
 			transform: rotateY(180deg);
-			left: auto;
-			right: 0;
+			inset-inline-start: auto;
+			inset-inline-end: 0;
 		}
 		&.light{
 			&:after,
@@ -1927,8 +1927,8 @@
 				// }
 				// @include respond('phone'){
 				// 	padding-top: 10px;
-				// 	padding-left: 10px;
-				// 	padding-right: 10px;
+				// 	padding-inline-start: 10px;
+				// 	padding-inline-end: 10px;
 				// }
 				.inner-bar {
 					z-index: 1;
@@ -1956,7 +1956,7 @@
 						}
 						@include respond('phone'){
 							width: calc(100% + 10px);
-							left: 15px;
+							inset-inline-start: 15px;
 						}
 					}
 				}
@@ -1990,9 +1990,9 @@
 			}
 
 			.logo-header{
-				border-right: 1px solid #EBEBEB;
-				padding-right: 15px;
-				margin-right: 18px;
+				border-inline-end: 1px solid #EBEBEB;
+				padding-inline-end: 15px;
+				margin-inline-end: 18px;
 			}
 
 			.extra-nav .extra-cell > *{
@@ -2039,8 +2039,8 @@
 			}
 			@include respond('phone'){
 				padding-top: 10px;
-				padding-left: 10px;
-				padding-right: 10px;
+				padding-inline-start: 10px;
+				padding-inline-end: 10px;
 			}
 			.inner-bar {
 				z-index: 1;
@@ -2065,15 +2065,15 @@
 							margin: 12px 20px 12px 0px;
 						}
 						@include respond("phone"){
-							margin-left: auto !important;
+							margin-inline-start: auto !important;
 						}
 					}
 
 					.logo-header{
-						border-right: 1px solid rgba(var(--bs-secondary-rgb), 0.1);
+						border-inline-end: 1px solid rgba(var(--bs-secondary-rgb), 0.1);
 						width: 145px;
-						padding-right: 15px;	
-						margin-left: 25px;
+						padding-inline-end: 15px;	
+						margin-inline-start: 25px;
 						height: 70px;
 
 						@include respond("tab-land"){
@@ -2081,25 +2081,25 @@
 						}
 
 						@include respond("tab-port"){
-							margin-left: 0;
+							margin-inline-start: 0;
 						}
 						@include respond("phone"){
-							padding-left: 12px;
-							padding-right: 12px;
+							padding-inline-start: 12px;
+							padding-inline-end: 12px;
 						}
 					}
 
 					.extra-nav{
-						padding-right: 20px;
+						padding-inline-end: 20px;
 						height: 70px;
 
 						@include respond("tab-port"){
-							margin-left: auto;
+							margin-inline-start: auto;
 						}
 					}
 
 					.navbar-nav{
-						padding-left: 20px;
+						padding-inline-start: 20px;
 					}
 					&:before{
 						content: "";
@@ -2119,7 +2119,7 @@
 						}
 						@include respond('phone'){
 							width: calc(100% + 10px);
-							left: 15px;
+							inset-inline-start: 15px;
 						}
 					}
 					
@@ -2127,8 +2127,8 @@
 				.header-part-right{
 					display: flex;
 					align-items: center;
-					margin-right: -12px;
-					padding-left: 32px;
+					margin-inline-end: -12px;
+					padding-inline-start: 32px;
 
 					@include respond("tab-land"){
 						display: none;
@@ -2162,7 +2162,7 @@
 							box-shadow: none;
 						}
 						.logo-header{
-							margin-left: 0;
+							margin-inline-start: 0;
 						}
 					}
 				}
@@ -2171,23 +2171,23 @@
 	}
 	&.style-2{
 		.logo-header{
-			margin-right: 30px;
+			margin-inline-end: 30px;
 		}
 		&.header-toggle{
 			@include respond('tab-land-min'){
 				.main-bar{
-					padding-left: 80px;
+					padding-inline-start: 80px;
 				}
 				.container-fluid{
-					padding-left: calc(var(--spacing) / 2);
+					padding-inline-start: calc(var(--spacing) / 2);
 				}
 			}
 		}
 		.container-fluid{
 			--spacing: 80px;
 			
-			padding-left: var(--spacing);
-			padding-right: var(--spacing);
+			padding-inline-start: var(--spacing);
+			padding-inline-end: var(--spacing);
 			
 			@include respond('wide-desktop'){
 				--spacing: 50px;
@@ -2206,7 +2206,7 @@
 			border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
 		}
 		.extra-nav-left{
-			border-right: 1px solid rgba(0, 0, 0, 0.1);
+			border-inline-end: 1px solid rgba(0, 0, 0, 0.1);
 			height: 100%;
 			width: 80px;
 			min-width: 80px;
@@ -2214,7 +2214,7 @@
 			justify-content: center;
 			align-items: center;
 			position: absolute;
-			left: 0;
+			inset-inline-start: 0;
 			top: 0;
 		}
 		.nav > li.menu-item-has-children > a:after,
@@ -2241,7 +2241,7 @@
 					background-color: #fff;
 				}
 				.extra-nav-left{
-					border-right: 1px solid rgba(255, 255, 255, 0.1);
+					border-inline-end: 1px solid rgba(255, 255, 255, 0.1);
 				}
 				.widget-content a{
 					color: #fff !important;
