--- a/assets/scss/layout/header/_w3menu.scss
+++ b/assets/scss/layout/header/_w3menu.scss
@@ -41,7 +41,7 @@
 								color: #fff;
 								height: 30px;
 								line-height: 30px;
-								right: 0;
+								inset-inline-end: 0;
 								text-align: center;
 								width: 30px;
 								z-index: 3;
@@ -77,7 +77,7 @@
 						i{
 							display: block;
 							font-size: 9px;
-							margin-left: 5px;
+							margin-inline-start: 5px;
 							margin-top: 0;
 							vertical-align: middle;
 							font-weight: 900;
@@ -89,7 +89,7 @@
 								color: #fff;
 								height: 30px;
 								line-height: 30px;
-								right: 0;
+								inset-inline-end: 0;
 								text-align: center;
 								width: 30px;
 								z-index: 3;
@@ -548,7 +548,7 @@
 	}
 	.menu-close{
 		position: absolute;
-		right: 20px;
+		inset-inline-end: 20px;
 		top: 25px;
 		background-color: #000;
 		width: 25px;
@@ -579,13 +579,13 @@
 	z-index: 999;
 	
 	&.fade-left{
-		left: 0;
+		inset-inline-start: 0;
 	}
 	&.fade-right{
-		right: 0;
+		inset-inline-end: 0;
 	}
 	&.fade-overlay{
-	    left: 0;
+	    inset-inline-start: 0;
 		width: 100%;
 		opacity: 0;
 		visibility: hidden;
@@ -608,19 +608,19 @@
 
 // Full Width
 .w3menu-end.header-nav .nav > li > .mega-menu{
-	right: 80px;
-	left: auto !important;
+	inset-inline-end: 80px;
+	inset-inline-start: auto !important;
 	
 	@include respond('tab-land'){
-		right: 0;
+		inset-inline-end: 0;
 	}
 }
 .justify-content-end.header-nav .nav > li > .mega-menu{
-	right: 80px;
-	left:auto !important;
+	inset-inline-end: 80px;
+	inset-inline-start: auto !important;
 	
 	@include respond('tab-land'){
-		right: 0;
+		inset-inline-end: 0;
 	}
 }
 
@@ -628,23 +628,23 @@
 	&.menu-left{
 		position:relative;
 		& > .sub-menu{
-			left: 0 !important;
+			inset-inline-start: 0 !important;
 		}
 	}
 	&.menu-right{
 		position:relative;
 		& > .sub-menu{
-			right: 0;
-			left: auto !important;
+			inset-inline-end: 0;
+			inset-inline-start: auto !important;
 			.sub-menu{
-			    left: -220px;
+			    inset-inline-start: -220px;
 			}
 		}
 	}
 	&.menu-center{
 		position:relative;
 		& > .sub-menu{
-			left: 50% !important;
+			inset-inline-start: 50% !important;
 			transform: translateX(-50%);
 		}
 	}
@@ -659,18 +659,18 @@
 			@include respond('tab-port-min'){
 				width: 100%;
 				max-width: 100%;
-				left:0 !important;
+				inset-inline-start: 0 !important;
 				padding-#{$dz-pos-left}:80px;
 				padding-#{$dz-pos-right}:80px;
-				left: 50% !important;
+				inset-inline-start: 50% !important;
 				transform: translate(-50%);
 				width: 100vw;
 				max-width: 100vw;
 			}
 			@include custommq ($min:1300px){
 				.container &{
-					padding-left: calc(calc(100vw - 1320px) / 2 + 15px);
-					padding-right: calc(calc(100vw - 1320px) / 2 + 15px);
+					padding-inline-start: calc(calc(100vw - 1320px) / 2 + 15px);
+					padding-inline-end: calc(calc(100vw - 1320px) / 2 + 15px);
 				}				
 			}
 			@include custommq ($max:1280px){
@@ -704,7 +704,7 @@
 		&.menu-left{
 			position:relative;
 			.mega-menu{
-			    left: 0 !important;
+			    inset-inline-start: 0 !important;
 			}
 		}
 		.post-menu{
@@ -716,8 +716,8 @@
 		&.menu-right{
 			position:relative;
 			.mega-menu{
-				right: 0;
-				left: auto !important;
+				inset-inline-end: 0;
+				inset-inline-start: auto !important;
 			}
 		}
 		&.menu-center{
@@ -725,7 +725,7 @@
 			
 			@include respond('tab-port-min'){
 				.mega-menu{
-					left: 50% !important;
+					inset-inline-start: 50% !important;
 					transform: translateX(-50%);
 				}
 			}
@@ -777,8 +777,8 @@
 				.side-left{
 					width: 80%;
 					flex: 0 0 80%;
-					padding-left: 0;
-					padding-right: 20px;
+					padding-inline-start: 0;
+					padding-inline-end: 20px;
 					
 					@include respond('tab-port'){
 						width: 100%;
@@ -819,10 +819,10 @@
 				.side-right{
 					width: 20%;
 					flex: 0 0 20%;
-					padding-left: 30px;
+					padding-inline-start: 30px;
 					
 					@include respond('tab-port'){
-						padding-left: 15px;
+						padding-inline-start: 15px;
 						width: 100%;
 						flex: 0 0 100%;
 					}
@@ -938,7 +938,7 @@
 }
 
 .header-nav.w3menu .nav > li.has-mega-menu.homedemo .mega-menu {
-    left: 0 !important;
+    inset-inline-start: 0 !important;
     width: auto;
     max-width: unset;
 }
