--- a/assets/scss/pages/_blog-details.scss
+++ b/assets/scss/pages/_blog-details.scss
@@ -136,7 +136,7 @@
 					color: var(--bs-primary);
 					font-size: 13px;
 					border-radius: 30px;
-					margin-right: 10px;
+					margin-inline-end: 10px;
 					
 					&::after{
 						content: "\f111" !important;
@@ -144,9 +144,9 @@
 						font-size: 7px;
 						transform: translateY(-2px);
 						display: inline-block;
-						margin-right: 6px;
+						margin-inline-end: 6px;
 						position: absolute;
-						left: 12px;
+						inset-inline-start: 12px;
 						top: 12px;
 					}
 					@include respond("phone"){
@@ -188,7 +188,7 @@
 					i{
 						font-size: 12px;
 						color: var(--bs-primary);
-						margin-right: 8px;
+						margin-inline-end: 8px;
 						transform: translateY(1px);
 					}
 					&:not(.post-date)::after{
@@ -215,7 +215,7 @@
 						i{
 							font-size: 12px;
 							color: #fff;
-							margin-right: 8px;
+							margin-inline-end: 8px;
 							transform: translateY(1px);
 						}
 						&:not(.post-date)::after{
@@ -378,7 +378,7 @@
 	.dz-info{
 		position: absolute;
 		top: 50%;
-		left: 50%;
+		inset-inline-start: 50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
 		padding: 0 15px !important;
@@ -1726,13 +1726,13 @@ pre {
 			.comment-body{
 				position: relative;
 				padding: 2px 0 25px 0;
-				margin-left: 100px;
+				margin-inline-start: 100px;
 				margin-bottom: 25px;
 				min-height: 115px;
 				border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 				
 				@include respond('phone'){
-					margin-left: 80px;
+					margin-inline-start: 80px;
 				}
 				.comment-author{
 					.avatar{
