--- a/assets/scss/pages/_under-construction.scss
+++ b/assets/scss/pages/_under-construction.scss
@@ -21,7 +21,7 @@
 		width: 160px;
 		position: absolute;
 		top: 45px;
-		left: 80px;
+		inset-inline-start: 80px;
 	}
 	.dzSubscribe{
 		margin-top: 40px;
@@ -49,7 +49,7 @@
 		
 		.under-construct-logo{
 			top: 30px;
-			left: 30px;
+			inset-inline-start: 30px;
 		}
 	}
 	@include respond('tab-land'){
